# fastapi-ref

./: .gitignore  README.md  pyproject.toml
example_apps/app_1/: README.md  pyproject.toml
example_apps/app_1/app/: main.py  start_server.py
example_apps/app_1/app/conf/api/: settings.toml
example_apps/app_1/app/domain/: README.md
example_apps/app_1/app/domain/item/: schemas.py
example_apps/app_1/app/domain/user/: schemas.py
example_apps/app_1/app/lib/: constants.py
example_apps/app_1/app/middlewares/: README.md
example_apps/app_2/: README.md  pyproject.toml
example_apps/app_2/app/: config.py  dependencies.py  main.py
example_apps/app_2/app/conf/: README.md  settings.toml
example_apps/app_2/app/conf/api/: settings.toml
example_apps/app_2/app/database/: __init__.py  base.py  utils.py
example_apps/app_2/app/domain/: __init__.py
example_apps/app_2/app/domain/item/: models.py  schemas.py
example_apps/app_2/app/domain/user/: schemas.py
example_apps/app_2/app/routers/: api_router.py  items.py  users.py
example_apps/app_3/: README.md  pyproject.toml
example_apps/app_3/app/: config.py  dependencies.py  main.py  start_server.py
example_apps/app_3/app/conf/: settings.toml
example_apps/app_3/app/conf/api/: settings.toml
example_apps/app_3/app/database/: __init__.py  utils.py
example_apps/app_3/app/domain/item/: __init__.py  crud.py  models.py  schemas.py
example_apps/app_3/app/routers/items/: items_router.py
example_apps/app_3/migrations/versions/: 4f1e72884ad3_commit_msg.py  631ba21d19b2_add_quantity_to_item.py  8a1926b919d0_first_commit.py  8eb47284c03a_commit_msg.py
example_apps/app_4/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
example_apps/app_4/app/: config.py  dependencies.py  main.py  start_server.py
example_apps/app_4/app/conf/db/: settings.toml
example_apps/app_4/app/database/: utils.py
example_apps/app_4/app/domain/item/: __init__.py  crud.py  models.py  schemas.py
example_apps/app_4/app/routers/: api_router.py
example_apps/app_4/app/routers/items/: items_router.py
example_apps/app_4/env_files/: app.env.example
example_apps/app_4/migrations/: env.py
example_apps/app_4/migrations/versions/: 4f1e72884ad3_commit_msg.py  8a1926b919d0_first_commit.py
example_apps/app_4/proxy/nginx/: nginx.conf
example_apps/app_4/proxy/nginx/conf/extra/: log-format.conf
example_apps/app_4/proxy/nginx/conf/sites-enabled/: api.conf
