
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "redjax", email = "none@none.com"},
]
dependencies = [
    "red-utils>=0.1.5",
    "dynaconf>=3.2.0",
    "stackprinter>=0.2.10",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.1",
    "pydantic>=2.1.1",
    "pydantic-settings>=2.0.2",
    "python-multipart>=0.0.6",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.280",
    "pytest>=7.4.0",
    "black>=23.7.0",
]

[tool.pdm.scripts]

## Format scripts
# Check only, don't fix
ruff = { cmd = "ruff check ." }
#  Check and fix
format = { cmd = "ruff check . --fix" }

## Start scripts
#  Run main app or script. Launches from app/
start-server-dev.shell = "cd app && pdm run python start_server.py"
start-server-dev.env = { ENV = "dev" }

start-server.shell = "cd app && pdm run python start_server.py"
start-server.env = { ENV = "prod" }

## Export requirement scripts
#  Export production requirements
export = { cmd = "pdm export --prod -o requirements.txt --without-hashes" }
#  Export only development requirements
export-dev = { cmd = "pdm export -d -o requirements.dev.txt --without-hashes" }
## Uncomment if/when using a CI group
# export-ci = {cmd = "pdm export -G ci -o requirements.ci.txt --without-hashes"}